--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -15,119 +15,133 @@ msgid ""
 msgstr ""
 "Project-Id-Version: canna\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-09-27 08:56+0900\n"
-"PO-Revision-Date: 2005-05-10 19:45+0200\n"
+"POT-Creation-Date: 2006-10-29 11:01+0100\n"
+"PO-Revision-Date: 2006-10-29 11:16+0100\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#. Type: boolean
 #. Description
-#: ../templates:4
+#: ../templates:1001
 msgid "Do you want to run the Canna server ?"
 msgstr "Chcete spustit server Canna?"
 
+#. Type: boolean
 #. Description
-#: ../templates:4
+#: ../templates:1001
 msgid ""
-"This package contains the Canna server and server related utilities. If you "
+"This package contains the Canna server and server-related utilities. If you "
 "are only interested in these utilities, you can disable the Canna server "
 "here."
 msgstr ""
 "Tento balíček obsahuje server Canna a nástroje s ním spojené. Pokud vás "
 "zajímají pouze nástroje, můžete zde server zakázat."
 
+#. Type: boolean
 #. Description
-#: ../templates:13
-msgid "Do you want to connect to the Canna server from remote host?"
+#: ../templates:2001
+msgid "Do you want to connect to the Canna server from a remote host?"
 msgstr "Chcete se k Canna serveru připojovat ze vzdálených počítačů?"
 
+#. Type: boolean
 #. Description
-#: ../templates:13
+#: ../templates:2001
 msgid ""
-"The Canna server only allows connections via UNIX domain sockets when `-"
-"inet' option is not specified.  It means that when Canna server is started "
-"without `-inet' option, only clients which run on the same host can connect "
-"to the server. Some clients such as `egg' and `yc-el' do not support  UNIX "
-"domain socket and  require `-inet' option even if they run on  the same host."
+"The Canna server only allows connections via UNIX domain sockets when the `-"
+"inet' option is not specified.  This means that when the Canna server is "
+"started without the `-inet' option, only clients which run on the same host "
+"can connect to the server. Some clients such as, `egg' and `yc-el', do not "
+"support UNIX domain socket and require the `-inet' option, even if they run "
+"on the same host."
 msgstr ""
 "Pokud není použita volba `-inet', povoluje Canna server spojení pouze přes "
-"unixové sockety. Jinými slovy to znamená, že se mohou připojit pouze "
-"klienti běžící na stejném počítači jako server. Někteří klienti jako `egg' "
-"a `yc-el' nepodporují unixové sockety a volbu `-inet' vyžadují i v případě, "
-"že běží na stejném počítači."
+"unixové sockety. Jinými slovy to znamená, že se mohou připojit pouze klienti "
+"běžící na stejném počítači jako server. Někteří klienti jako `egg' a `yc-el' "
+"nepodporují unixové sockety a volbu `-inet' vyžadují i v případě, že běží na "
+"stejném počítači."
 
+#. Type: boolean
 #. Description
-#: ../templates:13
+#: ../templates:2001
 msgid ""
-"If you want to connect this Canna server from remote hosts or if you want to "
-"use INET-domain-only softwares, you should run the server with `-inet' "
-"option."
+"If you want to connect to this Canna server from remote hosts, or if you "
+"want to use INET-domain-only software, you should run the server with the `-"
+"inet' option."
 msgstr ""
-"Chcete-li se k tomuto Canna serveru připojovat ze vzdálených počítačů nebo "
-"pokud chcete používat software komunikující pouze přes síťovou vrstvu, "
-"měli byste server spustit s volbou `-inet'."
+"Chcete-li se k tomuto Canna serveru připojovat ze vzdálených počítačů, nebo "
+"pokud chcete používat software komunikující pouze přes síťovou vrstvu, měli "
+"byste server spustit s volbou `-inet'."
 
+#. Type: boolean
 #. Description
-#: ../templates:30
+#: ../templates:3001
 msgid "Manage /etc/hosts.canna with debconf ?"
 msgstr "Spravovat /etc/hosts.canna debconfem?"
 
+#. Type: boolean
 #. Description
-#: ../templates:30
-msgid "/etc/hosts.canna controls which host can connect to this server."
+#: ../templates:3001
+msgid "/etc/hosts.canna controls which hosts can connect to this server."
 msgstr ""
 "/etc/hosts.canna určuje, které počítače se mohou k tomuto serveru připojit."
 
+#. Type: boolean
 #. Description
-#: ../templates:30
+#: ../templates:3001
 msgid ""
 "By default /etc/hosts.canna will be managed with debconf. Refuse here if you "
 "want to manage /etc/hosts.canna yourself."
 msgstr ""
-"Implicitně se /etc/hosts.canna bude spravovat debconfem. Odmítněte pouze "
-"v případě, že chcete soubor /etc/hosts.canna spravovat sami."
+"Implicitně se /etc/hosts.canna bude spravovat debconfem. Odmítněte pouze v "
+"případě, že chcete soubor /etc/hosts.canna spravovat sami."
 
+#. Type: string
 #. Description
-#: ../templates:40
-msgid "Please enter the name of hosts allowed to connect this server"
+#: ../templates:4001
+msgid "Please enter the name of each host allowed to connect to this server"
 msgstr ""
-"Zadejte prosím jména počítačů oprávněných přistupovat k tomuto serveru."
+"Zadejte prosím jména všech počítačů oprávněných přistupovat k tomuto serveru."
 
+#. Type: string
 #. Description
-#: ../templates:40
+#: ../templates:4001
 msgid ""
-"Please enter the names of hosts allowed to connect to this Canna server, "
+"Please enter the names of the hosts allowed to connect to this Canna server, "
 "separated by spaces."
 msgstr ""
 "Zadejte mezerami oddělený seznam počítačů oprávněných přistupovat k tomuto "
 "Canna serveru."
 
+#. Type: string
 #. Description
-#: ../templates:40
+#: ../templates:4001
 msgid ""
-"`unix'  is a special notation for allowing the accses via UNIX domain "
-"sockets."
+"`unix'  is a special notation for allowing access via UNIX domain sockets."
 msgstr ""
 "`unix' je speciální syntaxe pro povolení přístupu přes unixové sockety."
 
+#. Type: select
 #. Description
-#: ../libcanna1g.templates:5
+#: ../libcanna1g.templates:1001
 msgid "Canna input style"
 msgstr "Vstupní metoda Canna"
 
+#. Type: select
 #. Description
-#: ../libcanna1g.templates:5
+#: ../libcanna1g.templates:1001
 msgid ""
-"Please choose default canna input style below, which will be installed if "
-"there is no previous configuration:"
+"Please choose the default canna input style below, which will be installed "
+"if there is no previous configuration:"
 msgstr ""
-"Vyberte implicitní vstupní metodu, která se použije v případě, že balíček "
-"nijak dál nenastavíte:"
+"Vyberte výchozí vstupní metodu, která se použije v případě, že žádné "
+"předchozí nastavení neexistuje:"
 
+#. Type: select
 #. Description
-#: ../libcanna1g.templates:5
+#: ../libcanna1g.templates:1001
 msgid ""
 " verbose - Canna3.5 default style with verbose comments\n"
 " 1.1     - old Canna style (ver. 1.1)\n"
@@ -135,7 +149,7 @@ msgid ""
 " jdaemon - jdaemon style\n"
 " just    - Justsystem ATOK like style\n"
 " lan5    - LAN5 like style\n"
-" matsu   - MATSU word prosessor like style\n"
+" matsu   - MATSU word processor like style\n"
 " skk     - SKK like style\n"
 " tut     - for TUT-Code\n"
 " unix    - UNIX style\n"
